--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@react-google-maps/api": "^2.20.5",
     "@react-router/node": "^7.1.5",
     "@react-router/serve": "^7.1.5",
+    "dynamic-import": "^0.1.1",
     "isbot": "^5.1.17",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.474.0",
+    "mocha": "^11.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
-    "react-router": "^7.1.5"
+    "react-router": "^7.1.5",
+    "selenium-webdriver": "^4.28.1"
   },
   "devDependencies": {
     "@react-router/dev": "^7.1.5",
