--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@react-google-maps/api": "^2.20.5",
     "@react-router/node": "^7.1.5",
     "@react-router/serve": "^7.1.5",
+    "axios": "^1.7.9",
     "dynamic-import": "^0.1.1",
+    "express": "^4.21.2",
     "isbot": "^5.1.17",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.474.0",
     "mocha": "^11.1.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
@@ -27,6 +30,7 @@
     "@react-router/dev": "^7.1.5",
     "@tailwindcss/vite": "^4.0.0",
     "@types/leaflet": "^1.9.16",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
