--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
     "react-router": "^7.1.5",
+    "react-router-dom": "^7.1.5",
     "selenium-webdriver": "^4.28.1"
   },
   "devDependencies": {
